--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -66,8 +66,8 @@
  ul li::before {
     content: '';
     position: absolute;
-    height: 28px;
-    width: 28px;
+    height: 22px;
+    width: 22px;
     border-radius: 50%;
     background-image: url(/images/unchecked.png);
     background-size: cover;
@@ -81,5 +81,20 @@
  }
  ul li.checked::before{
     background-image: url(/images/checked.png);
-    
+
+ }
+ ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+ }
+ ul li span:hover {
+    background: #edeef0;
  }
